upgrade to Java 17 (#201)
* cleanup lift config

* upgrade to java 17

* re-enable certificate checks for prefix.cc

* add jdk17 note in readme