@@ -41,14 +41,14 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <carml.version>0.4.9</carml.version>
         <rdf4j.version>4.3.8</rdf4j.version>
         <classgraph.version>4.8.165</classgraph.version>
         <lombok.version>1.18.30</lombok.version>
         <reactor.version>3.6.2</reactor.version>
-        <spring.boot.version>2.7.18</spring.boot.version>
+        <spring.boot.version>3.2.2</spring.boot.version>
         <picocli.version>4.7.5</picocli.version>
         <log4j.version>2.22.1</log4j.version>
         <system-lambda.version>1.2.1</system-lambda.version>
@@ -175,8 +175,8 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.12.1</version>
                     <configuration>
-                        <source>11</source>
-                        <target>11</target>
+                        <source>17</source>
+                        <target>17</target>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -249,6 +249,12 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>3.2.5</version>
+                    <configuration>
+                        <!-- dependent on https://github.com/stefanbirkner/system-lambda/issues/27 -->
+                        <argLine>
+                            -Djava.security.manager=allow
+                        </argLine>
+                    </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.sonatype.plugins</groupId>
@@ -431,13 +437,13 @@
 
     <profiles>
         <profile>
-            <id>jdk11</id>
+            <id>jdk17</id>
             <activation>
-                <jdk>11</jdk>
+                <jdk>17</jdk>
             </activation>
             <properties>
-                <java.version>11</java.version>
-                <maven.compiler.release>11</maven.compiler.release>
+                <java.version>17</java.version>
+                <maven.compiler.release>17</maven.compiler.release>
             </properties>
         </profile>
         <profile>
